--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Market Oracle Environment Variables
-# Copy this file to .env and fill in your actual values
+# Copy this file to .env and fill in your actual value
 
 # Google APIs
 GOOGLE_API_KEY=your_google_api_key_here
