--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,14 @@ dependencies = [
     "feedparser>=6.0.10",
     "requests>=2.32.0",
     "neo4j>=5.28.0",
+    # Additional framework dependencies
+    "structlog>=23.1.0",
+    "pyyaml>=6.0",
+    # Testing dependencies
+    "pytest>=7.4.0",
+    "pytest-asyncio>=0.21.0",
+    "pytest-cov>=4.1.0",
+    "pytest-mock>=3.11.0",
 ]
 
 [project.scripts]
