--- a/configs/framework.yaml
+++ b/configs/framework.yaml
@@ -66,7 +66,7 @@ agents:
     description: "Primary orchestration agent for multi-agent coordination"
     quality_domain: "BUSINESS"
     temperature: 0.1
-    model: "gemini-2.0-flash"
+    model: "gemini-2.5-pro-preview-06-05"
     mcp_tools_enabled: true
     a2a_enabled: true
     capabilities:
@@ -82,7 +82,7 @@ agents:
     description: "Handles technical analysis and implementation tasks"
     quality_domain: "SERVICE"
     temperature: 0.0
-    model: "gemini-2.0-flash"
+    model: "gemini-2.5-pro-preview-06-05"
     mcp_tools_enabled: true
     a2a_enabled: true
     capabilities:
@@ -98,7 +98,7 @@ agents:
     description: "Performs detailed code analysis and quality checks"
     quality_domain: "SERVICE"
     temperature: 0.0
-    model: "gemini-2.0-flash"
+    model: "gemini-2.5-pro-preview-06-05"
     mcp_tools_enabled: true
     a2a_enabled: true
     capabilities:
