--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 # Comprehensive ignore patterns for multi-agent systems with MCP integration
 
 adc_credentials.json
+agent-development-kit-crash-course
 
 # ============================================
 # PYTHON & PACKAGE MANAGEMENT
