--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 
 adc_credentials.json
 agent-development-kit-crash-course
+mcp-crawl4ai-rag
 
 # ============================================
 # PYTHON & PACKAGE MANAGEMENT
